# tamga

./: .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md
.github/workflows/: adversarial-gate.yml  integration-smoke.yml  lighthouse.yml
analyzer/app/: executors.py  grpc_server.py  main.py
analyzer/tests/: conftest.py  test_compliance_routes.py  test_injection_llm.py  test_pii_deep.py  test_sdk.py
dashboard/: Dockerfile  README.md  lighthouserc.json  package-lock.json  playwright.config.ts
dashboard/__mocks__/: handlers.ts
dashboard/app/: sitemap.ts
dashboard/coverage/: coverage-final.json  index.html
dashboard/e2e/: traffic-analytics.spec.ts
dashboard/lib/: api.ts  blog-data.ts  humanize.ts  motion.test.ts  owasp-llm.test.ts  parse-metrics.ts  tamga-simulate.ts  toast.test.ts  utils.test.ts
deploy/: README.md
deploy/backup/: backup.sh
deploy/migrations/: 001_init.down.sql  005_retention_run_log.down.sql  005_retention_run_log.up.sql  007_analyzer_findings.down.sql  007_analyzer_findings.up.sql  009_missing_models.up.sql  010_event_outbox.up.sql  011_tenant_rls.up.sql  012_incident_lifecycle.up.sql  013_saved_hunts.up.sql
design-system/b2b-ai-security-dashboard/: MASTER.md
design-system/pages/: dashboard.md
docs/: ENISA_VULNERABILITY_DISCLOSURE.md
proxy/: README.md  coverage_telemetry.html  tamga-policy.yaml
scripts/: loadtest.js
sdk/python/: pyproject.toml
sdk/python/tamga/: __init__.py  errors.py
tamga/: .gitignore  CHANGELOG.md  LICENSE  LICENSE-COMMERCIAL.md  README.md  SECURITY.md
(+845 files in other folders)
