[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tamga-client"
version = "0.1.0"
description = "Python SDK for Tamga AI Security Proxy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["tamga"]
